--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1464,7 +1464,7 @@ body::-webkit-scrollbar-track {
   .accordion {
 
     @media (max-width: $max) {
-      box-shadow: 0px ($wm * 0.25) 0px 0px #CC3312;
+      // box-shadow: 0px ($wm * 0.25) 0px 0px #CC3312;
     }
   }
 
@@ -1479,15 +1479,15 @@ body::-webkit-scrollbar-track {
     border-top: ($w * 1) solid #CC3312;
 
     @media (max-width: $max) {
-      border-top: none;
-      box-shadow: 0px ($wm * -0.25) 0px 0px #CC3312;
+      // border-top: none;
+      // box-shadow: 0px ($wm * -0.25) 0px 0px #CC3312;
     }
 
     &:last-child {
       border-bottom: ($w * 1) solid #CC3312;
 
       @media (max-width: $max) {
-        border-bottom: none;
+        // border-bottom: none;
       }
     }
   }
@@ -1611,7 +1611,7 @@ body::-webkit-scrollbar-track {
         input,
         textarea {
           color: rgba(159, 29, 0, 1);
-          border: 1px solid #492E18;
+          border: 1px solid #9e8167;
           padding: ($w * 25) ($w * 30);
           font-weight: 400;
           font-size: ($w * 30);
@@ -1628,8 +1628,8 @@ body::-webkit-scrollbar-track {
             padding: ($wm * 12) ($wm * 10);
             font-size: ($wm * 12);
             margin-bottom: ($wm * 5);
-            box-shadow: 0px 0px 0px ($wm * 0.25) #492E18;
-            border: none;
+            // box-shadow: 0px 0px 0px ($wm * 0.25) #492E18;
+            // border: none;
           }
         }
       }
